--- a/style.css
+++ b/style.css
@@ -17,10 +17,9 @@ body {
     line-height: 1.4;
     color: #000;
   }
-  
-  a {
-    color: #000;
-  }
+a{
+  color: #000;
+}
   
   ul {
     list-style: none;
@@ -35,7 +34,7 @@ body {
     max-width: 100%;
   }
   
-  section a {
+  section a  {
     color: #fff;
   }
 
@@ -44,7 +43,7 @@ body {
       height: 50px;
   }
 
-
+/* nav */
 .nav-bar{
     width: 100%;
     height: auto;
@@ -93,6 +92,16 @@ body {
     color:var(--color-primary);
 }
 
+/* box */
+.box{
+  margin-bottom: 30px;
+}
+
+.box-inner{
+  max-width:700px;
+  margin: 0 auto;
+}
+
 /* Buttons */
 .btn {
   cursor: pointer;
@@ -128,4 +137,88 @@ body {
 
 .btn-dark:hover {
   background-color: #333;
+}
+
+/* Backgrounds */
+
+.bg-primary{
+  background-color:var(--color-primary);
+  color:#fff;
+
+}
+.bg-secondary{
+  color:var(--color-secondary);
+  color:#fff;
+}
+.bg-extra{
+  color:var(--color-extra);
+  color:#000;
+}
+
+.bg-dark{
+  background-color: var(--color-dark);
+  color:#000;
+}
+
+
+/* text style */
+
+.text-center{
+  text-align: center;
+}
+
+.text-xl {
+  font-size: 50px;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.text-lg {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.text-md {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.text-sm {
+  font-size: 19px;
+  margin-bottom: 20px;
+}
+
+/* Padding */
+.py-sm {
+  padding: 10px 0;
+}
+.py-md {
+  padding: 20px 0;
+}
+.py-lg {
+  padding: 40px 0;
+}
+
+@media (max-width: 960px) {
+  .text-xl{
+    font-size: 30px;
+  }
+   .text-lg {
+    font-size: 25px;
+  }
+
+  .text-md {
+    font-size: 19px;
+  }
+}
+
+@media (min-width: 1440px){
+  .box{
+    max-width:1440px;
+    margin-right:auto;
+    margin-left:auto;
+  }
 }
