template footer with responsive media quries

--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
   }
 a{
   color: #000;
+  text-decoration: none;
 }
-  
   ul {
     list-style: none;
   }
@@ -92,6 +92,40 @@ a{
     color:var(--color-primary);
 }
 
+/* footer and social */
+.footer-container{
+  width: 100%;
+  max-width: 1440px;
+  margin:0 auto;
+  padding: 0 30px 30px; 
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.social img{
+width:35px;
+height:35px;
+}
+
+
+.social a {
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+
+.divider {
+  width: 95%;
+  height: 1px;
+  background-color: #ccc;
+  margin: 40px auto;
+}
+
+
 /* box */
 .box{
   margin-bottom: 30px;
@@ -100,6 +134,18 @@ a{
 .box-inner{
   max-width:700px;
   margin: 0 auto;
+}
+
+.box-text{
+  max-width:500px;
+  text-align: center;
+  justify-content: center;
+  padding:20px 0;
+  margin: 0 auto;
+}
+
+.box-text .btn{
+  margin-top: 20px;
 }
 
 /* grid styles */
@@ -227,10 +273,42 @@ align-items: center;
   }
 }
 
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
+  }
+
+  .grid-col-2 {
+    grid-template-columns: 1fr;
+  }
+
+  .grid-reversed :first-child {
+    order: 0;
+  }
+
+  .navbar-brand img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .navbar .navbar-nav-left,
+  .navbar .navbar-nav-right {
+    display: none;
+  }
+
+  .footer {
+    text-align: center;
+  }
+}
+
 @media (min-width: 1440px){
   .box{
     max-width:1440px;
     margin-right:auto;
     margin-left:auto;
+  }
+
+  .divider {
+    max-width: 94%;
   }
 }
